# OpenSports

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  opensports.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-ci.yml
api/: main.py
experiments/: README.md  __init__.py  advanced_stats.py  api.py  demo.py  experiment_service.py  persistence.py  requirements.txt
experiments/docs/: best_practices.md
experiments/examples/: README.md  __init__.py  redis_persistence_example.py  sql_persistence_example.py  web_integration.py
experiments/tests/: __init__.py  test_experiment_service.py
experiments/tools/: __init__.py  migrate_between_backends.py  migrate_to_sql.py
modeling/: api.py  forecaster.py  lead_scoring.py
modeling/tests/: test_forecaster.py  test_lead_scoring.py
opensports/: __init__.py  cli.py
opensports/agents/: __init__.py  game_analyst.py
opensports/analytics/: __init__.py  performance.py
opensports/api/: __init__.py  main.py
opensports/cicd/: __init__.py  pipeline.py
opensports/core/: __init__.py  cache.py  config.py  database.py  logging.py
opensports/data_quality/: __init__.py  profiler.py  validator.py
opensports/deployment/: __init__.py  docker.py
opensports/experiments/: __init__.py  causal_analysis.py
opensports/ingestion/: __init__.py  collector.py  nba.py
opensports/ml/: __init__.py  pipeline.py
opensports/modeling/: __init__.py  game_predictor.py  player_performance.py
opensports/monitoring/: __init__.py  alerting.py  dashboard.py  health.py  metrics.py  profiler.py  tracing.py
opensports/realtime/: __init__.py  stream_processor.py
opensports/security/: __init__.py  auth.py
opensports/segmentation/: __init__.py  audience.py
opensports/testing/: __init__.py  runners.py
opensports/visualization/: __init__.py  charts.py  components.py  dashboard.py
segmentation/: segmenter.py
segmentation/tests/: test_segmenter.py
tests/: test_api.py  test_experiment_api.py  test_lead_scoring_api.py
ui/: README.md
